--- a/index.html
+++ b/index.html
@@ -191,17 +191,16 @@
           </div> <!-- /row -->
         </div> <!-- /container -->
       </div> <!-- /footer-columns-region -->
-
-          </div> <!-- /row -->
-        </div> <!-- /container -->
-      </footer>
-    </div> <!-- /main-wrapper -->
+    </div> <!-- /row -->
+    </div> <!-- /container -->
+        <!-- /main-wrapper -->
 
     <!-- Back to top button -->
 
     <div id="back-to-top">
       <i class="ion-ios7-arrow-up"></i>
     </div>
+
 
     <!-- End of Back to top button -->
 
@@ -217,7 +216,5 @@
     <script src="js/venobox.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="js/app.js"></script>
-    <!-- Demo Switcher -->
-    <script src="js/demo-switcher.js"></script>
   </body>
 </html>
