--- a/page-about.html
+++ b/page-about.html
@@ -177,9 +177,8 @@
           </div> <!-- /row -->
         </div> <!-- /container -->
       </div> <!-- /footer-columns-region -->
-
-          </div> <!-- /row -->
-        </div> <!-- /container -->
+        <!-- /row -->
+        <!-- /container -->
         <!-- /main-wrapper -->
 
     <!-- Back to top button -->
@@ -202,7 +201,5 @@
     <script src="js/venobox.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="js/app.js"></script>
-    <!-- Demo Switcher -->
-    <script src="js/demo-switcher.js"></script>
   </body>
 </html>
