--- a/page-about.html
+++ b/page-about.html
@@ -92,7 +92,7 @@
                   <p>Partnering with larger general agencies allow us to give access to cutting edge technologies and programs at no additional cost to our clients.</p>
               </div> <!-- /col-xs-12 -->
               <div class="col-xs-12 col-md-6 margin-top-sm-30">
-                <img src="img/highlighted/everyonetable.jpg" class="img-responsive img-full-width" />
+                <img src="img/highlighted/everyonetable_opt.jpg" class="img-responsive img-full-width" />
               </div> <!-- /col-xs-12 -->
             </div> <!-- /row -->
           </div> <!-- /container -->
@@ -105,7 +105,7 @@
             <div class="row">
               <div class="col-xs-12 col-md-4 team-item">
                 <div class="team-item-image">
-                  <img src="img/staff/DanPortrait.jpg" alt="member 1" title="member 1" class="img-responsive" />
+                  <img src="img/staff/DanPortrait_opt.jpg" alt="member 1" title="member 1" class="img-responsive" />
                 </div> <!-- /team-item-image -->
                 <div class="team-item-name">
                   <h6>Daniel C. Venegas</h6>
@@ -114,7 +114,7 @@
               </div> <!-- /team-item -->
               <div class="col-xs-12 col-md-4 team-item">
                 <div class="team-item-image">
-                  <img src="img/staff/EricaPortrait.jpg" alt="member 2" title="member 2" class="img-responsive" />
+                  <img src="img/staff/EricaPortrait_opt.jpg" alt="member 2" title="member 2" class="img-responsive" />
                 </div> <!-- /team-item-image -->
                 <div class="team-item-name">
                   <h6>Erica L. Sylvia</h6>
@@ -123,7 +123,7 @@
               </div> <!-- /team-item -->
               <div class="col-xs-12 col-md-4 team-item">
                 <div class="team-item-image">
-                  <img src="img/staff/BevPortrait.jpg" alt="member 3" title="member 3" class="img-responsive" />
+                  <img src="img/staff/BevPortrait_opt.jpg" alt="member 3" title="member 3" class="img-responsive" />
                 </div> <!-- /team-item-image -->
                 <div class="team-item-name">
                   <h6>Beverly J. Evans</h6>
