--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link href="vsbenefitlogo.png" rel="icon" type="image/png" />
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,700%7cBitter:400,700' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Lato:100,300,700%7cBitter:400,700" rel="stylesheet" type="text/css">
     <!-- Bootstrap 3.1.0 -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <!-- Flexslider 2 -->
